# rail_cal_simulation

./: CMakeLists.txt  README.md  package.xml
include/rail_cal_simulation/: camera_model.h  ceres_helpers.h  cost_function.h  dot_grid.h  mutable_model_costs.h  observation_creator.h  pnp.h  point3d.h  random.h  utilities.h
src/: main.cpp  observation_creator.cpp  utilities.cpp
src/rail_cal_simulation/: camera_model.cpp  dot_grid.cpp  grid_main.cpp  pnp.cpp  random.cpp
